# mp6_2022

./: .cproject  .gitignore  .mxproject  .project  Blinky Debug.launch  Blinky.ioc  README.md
.github/workflows/: rust.yml
Debug/: Blinky.elf  Blinky.list  Blinky.map  makefile  objects.list  sources.mk
Debug/Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal.d  stm32h7xx_hal_adc.d  stm32h7xx_hal_adc_ex.d  stm32h7xx_hal_cortex.d  stm32h7xx_hal_dma.d  stm32h7xx_hal_dma_ex.d  stm32h7xx_hal_eth.d  stm32h7xx_hal_eth_ex.d  stm32h7xx_hal_exti.d  stm32h7xx_hal_flash.d  stm32h7xx_hal_flash_ex.d  stm32h7xx_hal_gpio.d  stm32h7xx_hal_hsem.d  stm32h7xx_hal_i2c.d  stm32h7xx_hal_i2c_ex.d  stm32h7xx_hal_mdma.d  stm32h7xx_hal_pwr.d  stm32h7xx_hal_pwr_ex.d  stm32h7xx_hal_rcc.d  stm32h7xx_hal_rcc_ex.d  stm32h7xx_hal_spi.d  stm32h7xx_hal_spi_ex.d  stm32h7xx_hal_tim.d  stm32h7xx_hal_tim_ex.d  stm32h7xx_hal_uart.d  stm32h7xx_hal_uart_ex.d  subdir.mk
Debug/Src/: main.cyclo  main.d  main.su  stm32h7xx_hal_msp.cyclo  stm32h7xx_hal_msp.d  stm32h7xx_hal_msp.su  stm32h7xx_it.d  stm32h7xx_it.su  subdir.mk  system_stm32h7xx.d  system_stm32h7xx.su
Debug/Startup/: startup_stm32h723zgtx.d  subdir.mk
Inc/: main.h  stm32h7xx_hal_conf.h
Src/: main.c  stm32h7xx_hal_msp.c
can/: Cargo.toml
can/src/: main.rs
display_async/: Cargo.toml
display_async/src/: main.rs
display_async/src/consts/: mod.rs
display_async/src/drivers/: asm_delay.rs  delay.rs  display.rs  mod.rs
display_driver/: Cargo.toml  memory.x
display_driver/.cargo/: config
display_driver/src/: display.rs  lcd_api.rs  main.rs  tim5.rs
stm_rust_test/: README.md  build.bat  build_unix.sh  meeting.md  memory.x
stm_rust_test/src/: main.rs  notes.md
vault/: Getting started with the repo.md  list of install steps.md  objectives.md
vault/.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  workspace.json
vault/.obsidian/plugins/obsidian-kanban/: main.js  styles.css
vault/.obsidian/plugins/obsidian-minimal-settings/: data.json  main.js
vault/.obsidian/plugins/oz-image-plugin/: main.js
vault/.obsidian/plugins/templater-obsidian/: data.json  main.js  manifest.json  styles.css
vault/templates/: core.md
