[package]
name = "display_async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
# cortex-m = { version = "0.7", features = ["inline-asm"]}
cortex-m = "0.7"
cortex-m-rt = "0.7"
rtt-target = { version = "0.3", features = ["cortex-m"] } 

embassy-time = { version = "0.1.0", features = ["tick-hz-32_768"] }
embassy-stm32 = { version = "0.1.0", features = ["stm32f411re", "memory-x", "time-driver-any"]  }

[patch.crates-io]
stm32-metapac = { git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "integrated-timers"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy",	features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-macros = { git = "https://github.com/embassy-rs/embassy" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", features = ["nightly", "unstable-traits", "defmt", "stm32f411RE", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }

[dependencies.stm32f4]
version = "0.15.1"
features = ["stm32f411", "rt"]

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false
