[package]
name = "stm_rust_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 'z'
lto = true

[dependencies]
embedded-hal = "^0.2.4"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "^0.2.0"
embedded-graphics = "0.7.1"


[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["stm32f411"]

